# erosion

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  HeightmapGenerator.cpp  HeightmapGenerator.h  IMeshGenerator.h  IRenderer.h  IShader.h  IWindow.h  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Vertex.h  Window.cpp  Window.h  main.cpp  stb_image_impl.cpp  terrain.frag  terrain.vert
.claude/: settings.local.json
test/: CMakeLists.txt  test_heightmap_generator.cpp
